# agent_c

./: .env.example  .gitignore  AGENTS.md  README.md  code.py  pyproject.toml
agent/: __init__.py  __main__.py  bootstrap.py  cli.py  logging_utils.py  main.py  settings.py
agent/admin/: __init__.py  api.py  authorization.py  ports.py  postgres_store.py  service.py  store.py
agent/application/: __init__.py  assistant.py
agent/approval/: coordinator.py  models.py  ports.py  postgres_store.py
agent/context/: __init__.py  manager.py  models.py
agent/core/: __init__.py  checkpoints.py  continuation.py  loop.py  ports.py  results.py  run_coordinator.py  run_state.py  tool_coordinator.py  tool_execution.py
agent/gateway/: README.md  __init__.py  base.py  dingtalk_gateway.py  models.py  runner.py  service.py  wecom.py  wecom_components.py  wecom_gateway.py
agent/hooks/: __init__.py  manager.py
agent/mcp/: __init__.py  mcp_manager.py
agent_runtime/: __init__.py  __main__.py  bootstrap.py  cli.py  contracts.py  logging_utils.py  main.py  settings.py
config/: default.yaml
docs/: session-runtime-architecture.md
tests/: test_admin.py  test_approval.py  test_architecture.py  test_cli.py  test_context.py  test_enterprise_modules.py  test_gateway.py  test_memory.py  test_model_reliability.py  test_models.py  test_observability.py  test_production_storage.py  test_retention.py  test_runtime_components.py  test_scheduler.py  test_session_runtime.py  test_sessions.py  test_skills.py  test_tasks.py  test_wecom_approval.py  test_wecom_long_connection.py
(+127 files in other folders)
