[project]
name = "agent-runtime-study"
version = "0.1.0"
description = "A pluggable multi-provider agent runtime."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.0",
    "anthropic>=0.40.0",
    "cryptography>=43.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
agent-runtime = 'agent_runtime.cli:main'
agent-runtime-wecom = 'agent_runtime.main:main'

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0"]
test = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent_runtime"]

[tool.hatch.build.targets.wheel.force-include]
"config/default.yaml" = "agent_runtime/default.yaml"
